# cneuron

./: .clang-format  .gitignore  CMakeLists.txt  README.md  grid_array.txt  input.py  main.c
.github/workflows/: build-and-test.yml  ci.yml
data/mnist/: MNIST_Copyright.md  info.txt
include/cneuron/: cneuron.h
include/data/: data.h
include/network/: network.h
src/: data.c  linear_algebra.c  main.c  network.c  rand.c  rand.h
src/data/: data.c  data.h
src/network/: network.c
test/: data.cpp  linear_algebra.cpp  main.cpp  network.cpp  test_utils.cpp  test_utils.h
test/data/: data.cpp
test/network/: network.cpp
